--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <div class="p-4 d-flex justify-content-center">
             <div class="row">
                 <div class="col-12 col-md-6">
-                    <img src="IMG_0817.PNG" alt="Telegram форум с BotMindAI" class="img-fluid rounded">
+                    <img src="IMG_0817.png" alt="Telegram форум с BotMindAI" class="img-fluid rounded">
                 </div>
                 <div class="col-12 col-md-6">
-                    <img src="IMG_0818.PNG" alt="Telegram форум с BotMindAI" class="img-fluid rounded">
+                    <img src="IMG_0818.png" alt="Telegram форум с BotMindAI" class="img-fluid rounded">
                 </div>
             </div>
         </div>
