--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 банковских карт.
             </p>
         </div>
-        <div class="p-4">
+        <div class="mt-2 p-4">
             <h2 class="text-center">Преимущества BotMindAI</h2>
-            <p class="text-center">💰 <strong>Без ежемесячной подписки:</strong> оплачивайте только за использование!
+            <p class="text-center">💰 <strong>Без ежемесячной подписки:</strong> платите только за использование!
             </p>
             <p class="text-center">🔥 <strong>Управляйте несколькими AI-чатами через Telegram форумы.</strong></p>
         </div>
@@ -47,12 +47,12 @@
                 интеллектом, каждый со своими уникальными настройками (моделью, системным промптом и уровнем
                 креативности) и историей сообщений.</p>
         </div>
-        <div class="p-4 d-flex justify-content-center">
-            <div class="row">
-                <div class="col-12 col-md-6">
+        <div class="p-4">
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-4 d-flex justify-content-center">
                     <img src="IMG_0817.png" alt="Telegram форум с BotMindAI" class="img-fluid rounded">
                 </div>
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-4 d-flex justify-content-center">
                     <img src="IMG_0818.png" alt="Telegram форум с BotMindAI" class="img-fluid rounded">
                 </div>
             </div>
@@ -63,8 +63,8 @@
                 диалоги
                 внутри своего ИИ форума. Вы найдете нужный разговор мгновенно!</p>
         </div>
-        <div class="p-4">
-            <h2>Как начать использовать BotMindAI?</h2>
+        <div class="mt-2 p-4">
+            <h2 class="text-center">Как начать использовать BotMindAI?</h2>
             <p>Следуйте следующим простым шагам, которые займут не более 1 минут:</p>
             <ol class="list-unstyled">
                 <li>
@@ -92,24 +92,74 @@
                 <li>
                     <strong>3. Добавьте бота BotMindAI в группу.</strong>
                     <p>Вы можете сделать это, перейдя на страницу профиля бота <a
-                            href="https://t.me/botmindaibot">https://t.me/botmindaibot</a> и выбрав опцию «Добавить в
+                            href="https://t.me/botmindaibot">@botmindaibot</a> и выбрав опцию «Добавить в
                         группу
                         или канал». После этого, назначьте бота администратором созданной группы. Это необходимо, чтобы
                         бот
                         мог управлять историей чата и отвечать на запросы.</p>
                 </li>
                 <li>
-                    <strong>4. Начните работу с ботом.</strong>
-                    <p>Теперь вы готовы к использованию BotMindAI. Для общения с ИИ, просто создайте новую тему в
+                    <strong>4. Начните диалог с искусственным интеллектом!</strong>
+                    <p>Теперь всё готово к использованию BotMindAI. Для общения с ИИ, просто создайте новую тему в
                         группе.
                         Каждая тема будет служить отдельным диалогом с ИИ, со своими настройками и историей.</p>
                     <p>Помните, что нейросети доступны внутри каждой темы. Вы можете настроить модель ИИ, системный
-                        промпт и
-                        уровень креативности для каждой темы отдельно.</p>
+                        промпт и уровень креативности для каждой темы отдельно.</p>
                 </li>
             </ol>
         </div>
 
+        <div class="mt-2 p-4">
+            <h2 class="text-center">Тарифы</h2>
+            <ul>
+                <li>Система оплаты <strong>Pay As You Go</strong> - вы платите только за то, что используете.</li>
+                <li><strong>Сервисный сбор</strong> составляет 20 ₽ в сутки и взимается только в активные дни
+                    использования.</li>
+                <li><strong>Оплата за запросы к AI моделям:</strong> плата рассчитывается из количества токенов,
+                    использованных в каждом запросе.</li>
+            </ul>
+
+            <h3>Что такое токены?</h3>
+            <ul>
+                <li>Токены - "частицы" слов.</li>
+                <li>1000 токенов ~ это примерно 750 слов на английском или 350 слов на русском.</li>
+            </ul>
+
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col" class="col-3">Нейросеть</th>
+                        <th scope="col" class="col-3">Входящие токены (цена за 1000 токенов)</th>
+                        <th scope="col" class="col-3">Исходящие токены (цена за 1000 токенов)</th>
+                        <th scope="col" class="col-3">Средняя стоимость запроса</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="col-3">GPT-3.5-Turbo</td>
+                        <td class="col-3">0,15 ₽</td>
+                        <td class="col-3">0,45 ₽</td>
+                        <td class="col-3">20-30 копеек</td>
+                    </tr>
+                    <tr>
+                        <td class="col-3">GPT-4-Turbo</td>
+                        <td class="col-3">2,00 ₽</td>
+                        <td class="col-3">6,00 ₽</td>
+                        <td class="col-3">2-5 ₽</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <ul>
+                <li><strong>Входящие токены</strong> связаны с информацией, которую вы отправляете боту.</li>
+                <li><strong>Исходящие токены</strong> относятся к ответам бота.</li>
+                <li>Используемая нейросеть и размер истории сообщений влияют на общее количество токенов.</li>
+            </ul>
+
+            <p><a href="https://botmindai.notion.site/BotMindAI-a4e1f601a0fd4719af9fef0f54666517" target="_blank">Полное
+                    описание
+                    тарифов</a></p>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
