--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
                     тарифов</a></p>
         </div>
     </div>
+    <footer class="text-white bg-dark p-4 mt-2 text-center">
+        <p>© 2024 BotMindAI. Все права защищены.</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
