Update table layout in index.html

--- a/index.html
+++ b/index.html
@@ -125,30 +125,32 @@
                 <li>1000 токенов ~ это примерно 750 слов на английском или 350 слов на русском.</li>
             </ul>
 
-            <table class="table">
-                <thead>
-                    <tr>
-                        <th scope="col" class="col-3">Нейросеть</th>
-                        <th scope="col" class="col-3">Входящие токены (цена за 1000 токенов)</th>
-                        <th scope="col" class="col-3">Исходящие токены (цена за 1000 токенов)</th>
-                        <th scope="col" class="col-3">Средняя стоимость запроса</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td class="col-3">GPT-3.5-Turbo</td>
-                        <td class="col-3">0,15 ₽</td>
-                        <td class="col-3">0,45 ₽</td>
-                        <td class="col-3">20-30 копеек</td>
-                    </tr>
-                    <tr>
-                        <td class="col-3">GPT-4-Turbo</td>
-                        <td class="col-3">2,00 ₽</td>
-                        <td class="col-3">6,00 ₽</td>
-                        <td class="col-3">2-5 ₽</td>
-                    </tr>
-                </tbody>
-            </table>
+            <div class="table-responsive">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col" class="col-sm-3">Нейросеть</th>
+                            <th scope="col" class="col-sm-3">Средняя стоимость запроса</th>
+                            <th scope="col" class="col-sm-3">Входящие токены (цена за 1000 токенов)</th>
+                            <th scope="col" class="col-sm-3">Исходящие токены (цена за 1000 токенов)</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="col-sm-3">GPT-3.5-Turbo</td>
+                            <td class="col-sm-3">20-30 копеек</td>
+                            <td class="col-sm-3">0,15 ₽</td>
+                            <td class="col-sm-3">0,45 ₽</td>
+                        </tr>
+                        <tr>
+                            <td class="col-sm-3">GPT-4-Turbo</td>
+                            <td class="col-sm-3">2-5 ₽</td>
+                            <td class="col-sm-3">2,00 ₽</td>
+                            <td class="col-sm-3">6,00 ₽</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
 
             <ul>
                 <li><strong>Входящие токены</strong> связаны с информацией, которую вы отправляете боту.</li>
