Update Telegram group creation instructions for iOS

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <li>
                     <strong>1. Создайте новую частную группу в Telegram.</strong>
                     <ul class="list-unstyled">
-                        <li><strong>iOS:</strong> Начните новое сообщение (нажмите на иконку в верхнем правом углу в
+                        <li><strong>iOS:</strong> Нажмите на иконку с карандашом в верхнем правом углу в
                             разделе
                             Чаты) > Новая группа.</li>
                         <li><strong>Android:</strong> Нажмите на круглую иконку с карандашом в списке чатов > Новая
