Fix  iOS instructions

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <ul class="list-unstyled">
                         <li><strong>iOS:</strong> Нажмите на иконку с карандашом в верхнем правом углу в
                             разделе
-                            Чаты) > Новая группа.</li>
+                            Чаты > Новая группа.</li>
                         <li><strong>Android:</strong> Нажмите на круглую иконку с карандашом в списке чатов > Новая
                             группа.
                         </li>
