Add font-awesome CSS and Telegram channel subscription section

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>BotMindAI - Телеграм бот для доступа к нейросети ChatGPT</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
         body {
             font-size: 18px;
@@ -161,6 +162,26 @@
             <p><a href="https://botmindai.notion.site/BotMindAI-a4e1f601a0fd4719af9fef0f54666517" target="_blank">Полное
                     описание
                     тарифов</a></p>
+        </div>
+
+        <div class="p-4 bg-light rounded">
+            <p><strong>Подписывайтесь на наш Телеграм канал <a href="https://t.me/botmindai"
+                        target="_blank">@botmindai</a></strong></p>
+            <p>В мире, где технологии развиваются с невероятной скоростью, важно оставаться в курсе последних новинок в
+                области нейросетей. BotMindAI - это ваш ключ к самым продвинутым нейросетевым технологиям прямо в
+                Телеграм!
+            </p>
+            <p>✨ Вас ожидает:
+            <ul>
+                <li>Уникальный контент, полезные советы и гайды по использованию бота;</li>
+                <li>Регулярные анонсы новых функций и возможностей бота;</li>
+                <li>Специальные акции и предложения, доступные только для подписчиков.</li>
+            </ul>
+            </p>
+            <button type="button" onclick="window.open('https://t.me/botmindai', '_blank')"
+                class="btn btn-primary btn-lg d-block mx-auto">
+                <i class="fab fa-telegram-plane"></i> Подписаться на канал
+            </button>
         </div>
     </div>
     <footer class="text-white bg-dark p-4 mt-2 text-center">
