Add BotMindAI launch button to index.html

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                 и
                 банковских карт.
             </p>
+            <button type="button" onclick="window.open('https://t.me/botmindaibot', '_blank')"
+                class="btn btn-danger btn-lg d-block mx-auto">
+                <i class="fas fa-rocket"></i> Запустить BotMindAI
+            </button>
         </div>
         <div class="mt-2 p-4">
             <h2 class="text-center">Преимущества BotMindAI</h2>
@@ -63,6 +67,12 @@
             <p>🔍 При этом вы можете использовать <strong>поиск в Телеграме</strong>, чтобы быстро найти нужные
                 диалоги
                 внутри своего ИИ форума. Вы найдете нужный разговор мгновенно!</p>
+        </div>
+        <div class="p-4">
+            <button type="button" onclick="window.open('https://t.me/botmindaibot', '_blank')"
+                class="btn btn-danger btn-lg d-block mx-auto">
+                <i class="fas fa-rocket"></i> Запустить BotMindAI
+            </button>
         </div>
         <div class="mt-2 p-4">
             <h2 class="text-center">Как начать использовать BotMindAI?</h2>
@@ -108,6 +118,13 @@
                         промпт и уровень креативности для каждой темы отдельно.</p>
                 </li>
             </ol>
+        </div>
+
+        <div class="p-4">
+            <button type="button" onclick="window.open('https://t.me/botmindaibot', '_blank')"
+                class="btn btn-danger btn-lg d-block mx-auto">
+                <i class="fas fa-rocket"></i> Запустить BotMindAI
+            </button>
         </div>
 
         <div class="mt-2 p-4">
@@ -162,6 +179,13 @@
             <p><a href="https://botmindai.notion.site/BotMindAI-a4e1f601a0fd4719af9fef0f54666517" target="_blank">Полное
                     описание
                     тарифов</a></p>
+        </div>
+
+        <div class="p-4">
+            <button type="button" onclick="window.open('https://t.me/botmindaibot', '_blank')"
+                class="btn btn-danger btn-lg d-block mx-auto">
+                <i class="fas fa-rocket"></i> Запустить BotMindAI
+            </button>
         </div>
 
         <div class="p-4 bg-light rounded">
