--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <p>🚀 Получите удобный и выгодный доступ к передовым нейросетям, таким как
                 <strong>ChatGPT</strong>,
                 <strong>GPT-3.5-Turbo</strong> и
-                <strong>GPT-4</strong>, в России через Telegram без необходимости использования VPN, иностранных номеров
+                <strong>GPT-4</strong>, из России через Telegram без необходимости использования VPN, иностранных
+                номеров
                 и
                 банковских карт.
             </p>
@@ -111,9 +112,9 @@
                 </li>
                 <li>
                     <strong>4. Начните диалог с искусственным интеллектом!</strong>
-                    <p>Теперь всё готово к использованию BotMindAI. Для общения с ИИ, просто создайте новую тему в
-                        группе.
-                        Каждая тема будет служить отдельным диалогом с ИИ, со своими настройками и историей.</p>
+                    <p>🎉 Всё готово! Просто создайте новую тему в
+                        группе и начните общение с ИИ.
+                        Каждая тема будет служить отдельным диалогом, со своими настройками и историей.</p>
                     <p>Помните, что нейросети доступны внутри каждой темы. Вы можете настроить модель ИИ, системный
                         промпт и уровень креативности для каждой темы отдельно.</p>
                 </li>
@@ -206,6 +207,14 @@
                 class="btn btn-primary btn-lg d-block mx-auto">
                 <i class="fab fa-telegram-plane"></i> Подписаться на канал
             </button>
+        </div>
+        <div class="mt-2 p-4">
+            <h2 class="text-center">Есть вопросы или предложения?</h2>
+            <p><i class="fas fa-envelope"></i> Напишите нам на почту <a
+                    href="mailto:support@botmind.ru">support@botmind.ru</a></p>
+            <p><i class="fab fa-telegram-plane"></i> Или в Телеграм основателю <a href="https://t.me/maxmanuylov"
+                    target="_blank">@maxmanuylov</a></p>
+            </p>
         </div>
     </div>
     <footer class="text-white bg-dark p-4 mt-2 text-center">
