--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         </div>
     </div>
     <footer class="text-white bg-dark p-4 mt-2 text-center">
-        <p>© 2024 BotMindAI. Все права защищены.</p>
+        <p>© 2024 BotMindAI. In AGI We Trust.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
