Add BotMindAI features to index.html

--- a/index.html
+++ b/index.html
@@ -129,6 +129,86 @@
         </div>
 
         <div class="mt-2 p-4">
+            <h2 class="text-center">Что умеет BotMindAI?</h2>
+            <div>
+                <h3><i class="fas fa-graduation-cap"></i> Образование и наука:</h3>
+                <ul>
+                    <li>Отвечать на вопросы по естественным наукам, истории, географии и т.д.</li>
+                    <li>Помогать в решении домашних заданий школьникам и студентам</li>
+                    <li>Помочь подготовиться к собеседованию и улучшить резюме, провести тестовое собеседование</li>
+                    <li>Делать краткие резюме книг и статей, составлять планы обучения</li>
+                    <li>Помогать с написанием академических работ - курсовых, дипломов, рефератов, решением задач</li>
+                </ul>
+            </div>
+            <div>
+                <h3><i class="fas fa-pencil-alt"></i> Работа с текстом:</h3>
+                <ul>
+                    <li>Создавать уникальный контент для сайтов, блогов и соцсетей</li>
+                    <li>Придумывать эффективные заголовки и тексты для рекламных кампаний</li>
+                    <li>Переводить тексты на разные языки</li>
+                    <li>Переписывать текст в нужном стиле - деловом, художественном и т.д.</li>
+                    <li>Исправлять ошибки в тексте - грамматические, стилистические, логические, фактические</li>
+                    <li>Создавать SEO-описания товаров для маркетплейсов</li>
+                    <li>Писать сценарии, рассказы, стихи по заданным параметрам</li>
+                    <li>Оценивать тон текста, настроение собеседника по диалогу</li>
+                </ul>
+            </div>
+            <div>
+                <h3><i class="fas fa-laptop-code"></i> IT и цифровые навыки:</h3>
+                <ul>
+                    <li>Консультировать по использованию распространенных приложений - Excel, Word, PowerPoint, Google
+                        Таблицы, Zoom</li>
+                    <li>Объяснять сложные вещи простым языком</li>
+                    <li>Писать, объяснять и оптимизировать программный код</li>
+                    <li>Помогать с ведением и продвижением аккаунтов в социальных сетях.</li>
+                    <li>Давать инструкции по настройке и использованию смартфонов, планшетов, ноутбуков</li>
+                </ul>
+            </div>
+            <div>
+                <h3><i class="fas fa-lightbulb"></i> Креативность и генерация идей:</h3>
+                <ul>
+                    <li>Предлагать креативные решения для преодоления "синдрома пустого листа"</li>
+                    <li>Симулировать диалоги на заданные темы для практики общения</li>
+                    <li>Генерировать идеи для названий компаний, продуктов, проектов</li>
+                    <li>Стимулировать воображение и генерацию новых идей в процессе диалога</li>
+                    <li>Помогать с придумыванием оригинальных и креативных подарков, сюрпризов, приглашений</li>
+                </ul>
+            </div>
+            <div>
+                <h3><i class="fas fa-hand-holding-heart"></i> Практические советы:</h3>
+                <ul>
+                    <li>Консультировать по вопросам воспитания и развития детей разных возрастов</li>
+                    <li>Составлять инструкции и руководства по эксплуатации</li>
+                    <li>Давать советы по саморазвитию, тайм-менеджменту, продуктивности</li>
+                    <li>Делиться житейскими советами по общению с людьми, решению конфликтов, поведению в стрессовых
+                        ситуациях</li>
+                    <li>Давать советы по ведению здорового образа жизни - питанию, спорту, режиму сна и отдыха</li>
+                    <li>Давать рекомендации по улучшению финансовой грамотности - контролю бюджета, инвестициям,
+                        накоплениям</li>
+                </ul>
+            </div>
+            <div>
+                <h3><i class="fas fa-film"></i> Развлечения и хобби:</h3>
+                <ul>
+                    <li>Давать персональные рекомендации для проведения досуга - фильмы, сериалы, книги, музыка, игры,
+                        кулинарные рецепты</li>
+                    <li>Рассказывать анекдоты, шутки, интересные истории</li>
+                    <li>Играть в простые словесные игры, загадки, викторины</li>
+                    <li>Давать советы по творческим хобби - рисованию, фотографии, рукоделию и т.д.</li>
+                    <li>Делиться лайфхаками для увлекательного отдыха и путешествий</li>
+                    <li>Предлагать оригинальные идеи для вечеринок, праздников, досуга с детьми</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="p-4">
+            <button type="button" onclick="window.open('https://t.me/botmindaibot', '_blank')"
+                class="btn btn-danger btn-lg d-block mx-auto">
+                <i class="fas fa-rocket"></i> Запустить BotMindAI
+            </button>
+        </div>
+
+        <div class="mt-2 p-4">
             <h2 class="text-center">Тарифы</h2>
             <ul>
                 <li>Система оплаты <strong>Pay As You Go</strong> - вы платите только за то, что используете.</li>
