--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
 
         <div class="mt-2 p-4">
-            <h2 class="text-center">Что умеет BotMindAI?</h2>
+            <h2 class="text-center">Что умееют нейросети в BotMindAI?</h2>
             <div>
                 <h3><i class="fas fa-graduation-cap"></i> Образование и наука:</h3>
                 <ul>
