Add footer links to index.html

--- a/index.html
+++ b/index.html
@@ -304,6 +304,12 @@
         </div>
     </div>
     <footer class="text-white bg-dark p-4 mt-2 text-center">
+        <p><a href="https://botmindai.notion.site/539f5dd1776e4ac29025e2570057f657?pvs=4" target="_blank"
+                class="text-secondary">Договор-оферта</a></p>
+        <p><a href="https://botmindai.notion.site/Telegram-botmindaibot-95edd524a7534d4082f47fa4f164a041?pvs=4"
+                target="_blank" class="text-secondary">Политика возврата</a></p>
+        <p><a href="https://botmindai.notion.site/0f684a9574d140798dcbde4cdb5428ec?pvs=4" target="_blank"
+                class="text-secondary">Политика конфиденциальности</a></p>
         <p>© 2024 BotMindAI. In AGI We Trust.</p>
     </footer>
 
