--- a/index.html
+++ b/index.html
@@ -253,6 +253,18 @@
                             <td class="col-sm-3">2,00 ₽</td>
                             <td class="col-sm-3">5,00 ₽</td>
                         </tr>
+                        <tr>
+                            <td class="col-sm-3">Claude 3 Sonnet</td>
+                            <td class="col-sm-3">1-3 ₽</td>
+                            <td class="col-sm-3">1,00 ₽</td>
+                            <td class="col-sm-3">3,00 ₽</td>
+                        </tr>
+                        <tr>
+                            <td class="col-sm-3">Claude 3 Opus</td>
+                            <td class="col-sm-3">10-20 ₽</td>
+                            <td class="col-sm-3">3,00 ₽</td>
+                            <td class="col-sm-3">13,00 ₽</td>
+                        </tr>
                     </tbody>
                 </table>
             </div>
