--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BotMindAI - Телеграм бот для доступа к нейросети ChatGPT</title>
+    <title>BotMindAI - Телеграм бот для доступа к нейросетям ChatGPT и Claude 3</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -36,8 +36,11 @@
         <div class="p-4 bg-light rounded">
             <p>🚀 Получите удобный и выгодный доступ к передовым нейросетям, таким как
                 <strong>ChatGPT</strong>,
-                <strong>GPT-3.5-Turbo</strong> и
-                <strong>GPT-4</strong>, из России через Telegram без необходимости использования VPN, иностранных
+                <strong>GPT-3.5-Turbo</strong>,
+                <strong>GPT-4</strong>,
+                <strong>Claude 3 Sonnet</strong> и
+                <strong>Claude 3 Opus</strong>
+                , из России через Telegram без необходимости использования VPN, иностранных
                 номеров
                 и
                 банковских карт.
@@ -243,7 +246,7 @@
                     <tbody>
                         <tr>
                             <td class="col-sm-3">GPT-3.5-Turbo</td>
-                            <td class="col-sm-3">20-60 копеек</td>
+                            <td class="col-sm-3">20-0 копеек</td>
                             <td class="col-sm-3">0,15 ₽</td>
                             <td class="col-sm-3">0,45 ₽</td>
                         </tr>
