--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                     <tbody>
                         <tr>
                             <td class="col-sm-3">OpenAI GPT-3.5-Turbo</td>
-                            <td class="col-sm-3">20-0 копеек</td>
+                            <td class="col-sm-3">0,3-0,6 ₽</td>
                             <td class="col-sm-3">0,15 ₽</td>
                             <td class="col-sm-3">0,45 ₽</td>
                         </tr>
