--- a/index.html
+++ b/index.html
@@ -238,35 +238,41 @@
                     <thead>
                         <tr>
                             <th scope="col" class="col-sm-3">Нейросеть</th>
-                            <th scope="col" class="col-sm-3">Средняя стоимость запроса</th>
                             <th scope="col" class="col-sm-3">Входящие токены (цена за 1000 токенов)</th>
                             <th scope="col" class="col-sm-3">Исходящие токены (цена за 1000 токенов)</th>
+                            <th scope="col" class="col-sm-3">Средняя стоимость запроса</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="col-sm-3">OpenAI GPT-3.5-Turbo</td>
-                            <td class="col-sm-3">0,3-0,6 ₽</td>
-                            <td class="col-sm-3">0,15 ₽</td>
-                            <td class="col-sm-3">0,45 ₽</td>
-                        </tr>
-                        <tr>
-                            <td class="col-sm-3">OpenAI GPT-4-Turbo</td>
-                            <td class="col-sm-3">3-8 ₽</td>
+                            <td class="col-sm-3">GPT-4-Turbo</td>
                             <td class="col-sm-3">2,00 ₽</td>
                             <td class="col-sm-3">5,00 ₽</td>
+                            <td class="col-sm-3">3-8 ₽</td>
                         </tr>
                         <tr>
-                            <td class="col-sm-3">Anthropic Claude 3 Sonnet</td>
-                            <td class="col-sm-3">2-4 ₽</td>
-                            <td class="col-sm-3">1,00 ₽</td>
-                            <td class="col-sm-3">3,00 ₽</td>
+                            <td class="col-sm-3">GPT-3.5-Turbo</td>
+                            <td class="col-sm-3">0,15 ₽</td>
+                            <td class="col-sm-3">0,45 ₽</td>
+                            <td class="col-sm-3">30-70 копеек</td>
                         </tr>
                         <tr>
-                            <td class="col-sm-3">Anthropic Claude 3 Opus</td>
-                            <td class="col-sm-3">9-16 ₽</td>
+                            <td class="col-sm-3">Claude 3 Opus</td>
                             <td class="col-sm-3">3,00 ₽</td>
                             <td class="col-sm-3">13,00 ₽</td>
+                            <td class="col-sm-3">9-16 ₽</td>
+                        </tr>
+                        <tr>
+                            <td class="col-sm-3">Claude 3 Sonnet</td>
+                            <td class="col-sm-3">1,00 ₽</td>
+                            <td class="col-sm-3">3,00 ₽</td>
+                            <td class="col-sm-3">2-4 ₽</td>
+                        </tr>
+                        <tr>
+                            <td class="col-sm-3">Claude 3 Haiku</td>
+                            <td class="col-sm-3">0,07 ₽</td>
+                            <td class="col-sm-3">0,40 ₽</td>
+                            <td class="col-sm-3">25-40 копеек</td>
                         </tr>
                     </tbody>
                 </table>
