--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <strong>ChatGPT</strong>,
                 <strong>GPT-3.5-Turbo</strong>,
                 <strong>GPT-4</strong>,
+                <strong>Claude 3 Haiku</strong>,
                 <strong>Claude 3 Sonnet</strong> и
                 <strong>Claude 3 Opus</strong>
                 , из России через Telegram без необходимости использования VPN, иностранных
