--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                 <strong>GPT-4</strong>,
                 <strong>Claude 3 Haiku</strong>,
                 <strong>Claude 3 Sonnet</strong> и
-                <strong>Claude 3 Opus</strong>
-                , из России через Telegram без необходимости использования VPN, иностранных
+                <strong>Claude 3 Opus</strong>, из России через Telegram без необходимости использования VPN,
+                иностранных
                 номеров
                 и
                 банковских карт.
