--- a/index.html
+++ b/index.html
@@ -65,11 +65,14 @@
         </div>
         <div class="p-4">
             <div class="row justify-content-center">
-                <div class="col-12 col-md-4 d-flex justify-content-center">
-                    <img src="IMG_0817.png" alt="Telegram форум с BotMindAI" class="img-fluid rounded">
+                <div class="col-12 col-md-3 d-flex justify-content-center m-2">
+                    <img src="IMG_0896.png" alt="Telegram форум с BotMindAI" class="img-fluid rounded">
                 </div>
-                <div class="col-12 col-md-4 d-flex justify-content-center">
-                    <img src="IMG_0818.png" alt="Telegram форум с BotMindAI" class="img-fluid rounded">
+                <div class="col-12 col-md-3 d-flex justify-content-center m-2">
+                    <img src="IMG_0897.png" alt="Telegram форум с BotMindAI" class="img-fluid rounded">
+                </div>
+                <div class="col-12 col-md-3 d-flex justify-content-center m-2">
+                    <img src="IMG_0901.png" alt="Telegram форум с BotMindAI" class="img-fluid rounded">
                 </div>
             </div>
         </div>
