--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                 и
                 банковских карт.
             </p>
-            <button type="button" onclick="window.open('https://t.me/botmindaibot', '_blank')"
+            <button type="button"
+                onclick="window.open('https://t.me/botmindaibot?start=r8d84fb6-www-lp-botmindru-button', '_blank')"
                 class="btn btn-danger btn-lg d-block mx-auto">
                 <i class="fas fa-rocket"></i> Запустить BotMindAI
             </button>
@@ -83,7 +84,8 @@
                 внутри своего ИИ форума. Вы найдете нужный разговор мгновенно!</p>
         </div>
         <div class="p-4">
-            <button type="button" onclick="window.open('https://t.me/botmindaibot', '_blank')"
+            <button type="button"
+                onclick="window.open('https://t.me/botmindaibot?start=r8d84fb6-www-lp-botmindru-button', '_blank')"
                 class="btn btn-danger btn-lg d-block mx-auto">
                 <i class="fas fa-rocket"></i> Запустить BotMindAI
             </button>
@@ -117,7 +119,8 @@
                 <li>
                     <strong>3. Добавьте бота BotMindAI в группу.</strong>
                     <p>Вы можете сделать это, перейдя на страницу профиля бота <a
-                            href="https://t.me/botmindaibot">@botmindaibot</a> и выбрав опцию «Добавить в
+                            href="https://t.me/botmindaibot?start=r8d84fb6-www-lp-botmindru-link">@botmindaibot</a> и
+                        выбрав опцию «Добавить в
                         группу
                         или канал». После этого, назначьте бота администратором созданной группы. Это необходимо, чтобы
                         бот
@@ -135,7 +138,8 @@
         </div>
 
         <div class="p-4">
-            <button type="button" onclick="window.open('https://t.me/botmindaibot', '_blank')"
+            <button type="button"
+                onclick="window.open('https://t.me/botmindaibot?start=r8d84fb6-www-lp-botmindru-button', '_blank')"
                 class="btn btn-danger btn-lg d-block mx-auto">
                 <i class="fas fa-rocket"></i> Запустить BotMindAI
             </button>
@@ -215,7 +219,8 @@
         </div>
 
         <div class="p-4">
-            <button type="button" onclick="window.open('https://t.me/botmindaibot', '_blank')"
+            <button type="button"
+                onclick="window.open('https://t.me/botmindaibot?start=r8d84fb6-www-lp-botmindru-button', '_blank')"
                 class="btn btn-danger btn-lg d-block mx-auto">
                 <i class="fas fa-rocket"></i> Запустить BotMindAI
             </button>
@@ -294,7 +299,8 @@
         </div>
 
         <div class="p-4">
-            <button type="button" onclick="window.open('https://t.me/botmindaibot', '_blank')"
+            <button type="button"
+                onclick="window.open('https://t.me/botmindaibot?start=r8d84fb6-www-lp-botmindru-button', '_blank')"
                 class="btn btn-danger btn-lg d-block mx-auto">
                 <i class="fas fa-rocket"></i> Запустить BotMindAI
             </button>
@@ -314,7 +320,8 @@
                 <li>Специальные акции и предложения, доступные только для подписчиков.</li>
             </ul>
             </p>
-            <button type="button" onclick="window.open('https://t.me/botmindai', '_blank')"
+            <button type="button"
+                onclick="window.open('https://t.me/botmindaibot?start=r8d84fb6-www-lp-botmindru-button', '_blank')"
                 class="btn btn-primary btn-lg d-block mx-auto">
                 <i class="fab fa-telegram-plane"></i> Подписаться на канал
             </button>
