--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
         <div class="p-4">
             <div class="row justify-content-center">
                 <div class="col-12 col-md-3 d-flex justify-content-center m-2">
-                    <img src="IMG_0896.png" alt="Telegram форум с BotMindAI" class="img-fluid rounded">
+                    <img src="IMG_0896.PNG" alt="Telegram форум с BotMindAI" class="img-fluid rounded">
                 </div>
                 <div class="col-12 col-md-3 d-flex justify-content-center m-2">
-                    <img src="IMG_0897.png" alt="Telegram форум с BotMindAI" class="img-fluid rounded">
+                    <img src="IMG_0897.PNG" alt="Telegram форум с BotMindAI" class="img-fluid rounded">
                 </div>
                 <div class="col-12 col-md-3 d-flex justify-content-center m-2">
-                    <img src="IMG_0901.png" alt="Telegram форум с BotMindAI" class="img-fluid rounded">
+                    <img src="IMG_0901.PNG" alt="Telegram форум с BotMindAI" class="img-fluid rounded">
                 </div>
             </div>
         </div>
