--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>BotMindAI - Телеграм бот для доступа к нейросетям ChatGPT и Claude 3</title>
+    <title>BotMindAI - Телеграм бот для доступа к нейросетям ChatGPT, Claude 3 и Gemini</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -45,6 +45,7 @@
                 <strong>ChatGPT</strong>,
                 <strong>GPT-3.5-Turbo</strong>,
                 <strong>GPT-4</strong>,
+                <strong>Google Gemini</strong>,
                 <strong>Claude 3 Haiku</strong>,
                 <strong>Claude 3 Sonnet</strong> и
                 <strong>Claude 3 Opus</strong>, из России через Telegram без необходимости использования VPN,
@@ -294,6 +295,13 @@
                             <td class="col-sm-2">25-40 копеек</td>
                             <td class="col-sm-2">0,07 ₽</td>
                             <td class="col-sm-2">0,40 ₽</td>
+                            <td class="col-sm-2">1 ₽</td>
+                        </tr>
+                        <tr>
+                            <td class="col-sm-2">Google Gemini Pro 1.5</td>
+                            <td class="col-sm-2">1-3 ₽</td>
+                            <td class="col-sm-2">0,40 ₽</td>
+                            <td class="col-sm-2">1,20 ₽</td>
                             <td class="col-sm-2">1 ₽</td>
                         </tr>
                     </tbody>
