Added GPT-4 Omni

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                 <strong>ChatGPT</strong>,
                 <strong>GPT-3.5-Turbo</strong>,
                 <strong>GPT-4</strong>,
+                <strong>GPT-4 Omni</strong>,
                 <strong>Google Gemini</strong>,
                 <strong>Claude 3 Haiku</strong>,
                 <strong>Claude 3 Sonnet</strong> и
@@ -262,6 +263,13 @@
                         </tr>
                     </thead>
                     <tbody>
+                        <tr>
+                            <td class="col-sm-2">GPT-4-Omni</td>
+                            <td class="col-sm-2">1-3 ₽</td>
+                            <td class="col-sm-2">0,70 ₽</td>
+                            <td class="col-sm-2">2,50 ₽</td>
+                            <td class="col-sm-2">5 ₽</td>
+                        </tr>
                         <tr>
                             <td class="col-sm-2">GPT-4-Turbo</td>
                             <td class="col-sm-2">3-7 ₽</td>
