Add GPT-4-Omni Mini to price list

--- a/index.html
+++ b/index.html
@@ -271,6 +271,13 @@
                             <td class="col-sm-2">5 ₽</td>
                         </tr>
                         <tr>
+                            <td class="col-sm-2">GPT-4-Omni Mini</td>
+                            <td class="col-sm-2">15-30 копеек</td>
+                            <td class="col-sm-2">0,05 ₽</td>
+                            <td class="col-sm-2">0,25 ₽</td>
+                            <td class="col-sm-2">1 ₽</td>
+                        </tr>
+                        <tr>
                             <td class="col-sm-2">GPT-4-Turbo</td>
                             <td class="col-sm-2">3-7 ₽</td>
                             <td class="col-sm-2">1,50 ₽</td>
