--- a/index.html
+++ b/index.html
@@ -264,14 +264,14 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="col-sm-2">GPT-4-Omni</td>
+                            <td class="col-sm-2">GPT-4o</td>
                             <td class="col-sm-2">1-3 ₽</td>
                             <td class="col-sm-2">0,70 ₽</td>
                             <td class="col-sm-2">2,50 ₽</td>
                             <td class="col-sm-2">5 ₽</td>
                         </tr>
                         <tr>
-                            <td class="col-sm-2">GPT-4-Omni Mini</td>
+                            <td class="col-sm-2">GPT-4o Mini</td>
                             <td class="col-sm-2">15-30 копеек</td>
                             <td class="col-sm-2">0,05 ₽</td>
                             <td class="col-sm-2">0,25 ₽</td>
